added music and fixed body width

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Car Race</title>
 </head>
 
-<script src="app.js"></script>
 <body>
     <img src="image/background.jpg" alt="" id="cloud">
     <img src="image/trees.png" alt="" id="trees">
@@ -16,6 +16,8 @@
     <img src="image/car_body.png" id="body" alt="">
     <img src="image/car_wheel_left.png" id="left" alt="">
     <img src="image/car_wheel_right.png" id="right" alt="">
+    <i class="fa-solid fa-volume-xmark" id="play"></i>
+    <script src="app.js"></script>
 </body>
 
 </html>
